fixed slight alignment issue with class form-group and btn calc

--- a/css/login.css
+++ b/css/login.css
@@ -42,7 +42,7 @@ fieldset {
 
 .form-group {
     width: 100%;
-    margin: 0.5em;
+    margin: 0.5em auto;
     /* This element must use 100% of the width */
     /* It should have a separation of .5em from elements on top of it and below it*/
 }
@@ -77,5 +77,5 @@ fieldset {
     /* You'll need to use the `calc` function to make the width of this element match the width of the button */
     /* See the example at: https://developer.mozilla.org/en-US/docs/Web/CSS/calc */
     /* HINT: Examples are available at: https://glitch.com/~input-button-width */
-    width: calc(100% - 11px);
+    width: calc(100% - 4px);
 }
